package Domain.ServicioMeteorologico;

public class EstadoDelTiempo {
  private Integer temperatura;

  public Integer getTemperatura() {
    return temperatura;
  }

  public EstadoDelTiempo(Integer temperatura) {
    this.temperatura = temperatura;
  }
}
