package Domain.ServicioMeteorologico;

public interface ServicioMeteorologico {
    EstadoDelTiempo estadoDelTiempo(String ubicacion);
}
